Add JLPT edge backfill and resilient queues